[tool.poetry]
name = "cg-hermes"
version = "3.0.0"
description = "Convert information between pipelines and CG"
authors = ["Måns Magnusson <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.7.3"
coloredlogs = "^14.0"
pyyaml = "^6.0.1"
typer = "^0.9.0"
typing-extensions = "^4.5.0"
tabulate = "^0.8.7"
bump2version = "^1.0.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
pre-commit = "*"
pytest = "^7.3.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
hermes = "cg_hermes.__main__:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

