[tool.poetry]
name = "cg-hermes"
version = "5.1.2"
description = "Convert information between pipelines and CG"
authors = ["Måns Magnusson <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
coloredlogs = "*"
pyyaml = "*"
typer = "*"
typing-extensions = "*"
tabulate = "*"
bump2version = "*"

[tool.poetry.dev-dependencies]
mkdocs = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
hermes = "cg_hermes.__main__:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

