[tool.poetry]
name = "cg-hermes"
version = "6.0.7"
description = "Convert information between pipelines and CG"
authors = ["Måns Magnusson <mans.magnusson@scilifelab.se>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
coloredlogs = "*"
pyyaml = "*"
typer = "*"
typing-extensions = "*"
tabulate = "*"
bump2version = "*"

[tool.poetry.dev-dependencies]
mkdocs = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
hermes = "cg_hermes.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
include_trailing_comma = "true"
line_length=100
multi_line_output=3
ensure_newline_before_comments = "true"

[tool.ruff]
line-length = 100
target-version = "py312"
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

